# binner-fleets-demo

./: .gitignore  README.md  pyproject.toml
biokea/: ensemble.py  runner.py  schema.py
biokea/binners/: _base.py
docker/base/: Dockerfile  build.sh
docker/binette/: Dockerfile
docker/cocacola/: Dockerfile
docker/comebin/: Dockerfile
docker/concoct/: Dockerfile
docker/das_tool/: Dockerfile
docker/genomeface/: Dockerfile
docker/graphbin2/: Dockerfile
docker/graphmb/: Dockerfile
docker/magscot/: Dockerfile
docker/maxbin2/: Dockerfile
docker/metabat2/: Dockerfile
docker/metabinner/: Dockerfile
docker/metacoag/: Dockerfile
docker/metadecoder/: Dockerfile
docker/metawrap/: Dockerfile
docker/mycc/: Dockerfile
docker/python2-legacy/: Dockerfile
docker/semibin2/: Dockerfile
docker/taxvamb/: Dockerfile
docker/unitigbin/: Dockerfile
docker/vamb/: Dockerfile
docs/: install-postmortems.md  runbook.md
scripts/: dispatch_wave1.sh  dispatch_wave2.sh  dispatch_wave3.sh  download_data.sh  finalize_wave1.sh  prebuild_images.sh  run_demo.sh  score.py  validate_specs.py
tests/: test_base_adapter.py  test_ensemble.py  test_runner.py  test_schema.py
tools/: _schema.json
tools/binette/: spec.yaml
tools/cocacola/: spec.yaml
tools/comebin/: spec.yaml
tools/concoct/: spec.yaml
tools/das_tool/: spec.yaml
tools/genomeface/: spec.yaml
tools/graphbin2/: spec.yaml
tools/graphmb/: spec.yaml
tools/magscot/: spec.yaml
tools/maxbin2/: spec.yaml
tools/metabat2/: spec.yaml
tools/metabinner/: spec.yaml
tools/metacoag/: spec.yaml
(+8 files in other folders)
