[project]
name = "biokea-binner-fleets-demo"
version = "0.1.0"
description = "Demo of Claude Fleets EAP: 20 metagenome binners → one ensembler"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=15.0",
    "polars>=0.20",
    "pyyaml>=6.0",
    "click>=8.1",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "jsonschema>=4.21",
]
score = [
    "matplotlib>=3.8",
    "cami-amber>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["biokea*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
